# eyetracker

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  README.md  SECURITY.md  STATUS.md  Taskfile.yml  audit_scorecard.json  cliff.toml  deny.toml  download-models.sh  justfile
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  journey-gate.yml  scorecard.yml  trufflehog.yml
.grade-reports/: clippy.raw  fmt.raw
agileplus-specs/EYE-SOTA-002-tobii-stream-engine/: meta.json  plan.md  spec.md
agileplus-specs/EYE-SOTA-003-pupil-labs/: meta.json  spec.md
agileplus-specs/EYE-SOTA-004-arkit-visionos/: meta.json  spec.md
bindings/kotlin/: README.md
bindings/kotlin/uniffi/eyetracker/: eyetracker.kt
bindings/swift/: README.md  eyetracker.swift  eyetrackerFFI.h  eyetrackerFFI.modulemap
crates/eyetracker-camera/: Cargo.toml
crates/eyetracker-camera/src/: backend_arkit.rs  backend_pupil.rs  backend_tobii.rs  backend_v4l2.rs  camera.rs  frame.rs  lib.rs
crates/eyetracker-cli/: Cargo.toml
crates/eyetracker-cli/src/: app.rs  calibration.rs  emit.rs  main.rs  mouse.rs  ui.rs
crates/eyetracker-core/: Cargo.toml
crates/eyetracker-core/src/: lib.rs
crates/eyetracker-domain/: Cargo.toml
crates/eyetracker-domain/src/: lib.rs
crates/eyetracker-ffi/: Cargo.toml  build.rs
crates/eyetracker-ffi/src/: eyetracker.udl  lib.rs  modern.rs
crates/eyetracker-inference/: Cargo.toml
crates/eyetracker-inference/src/: accessibility.rs  calibration.rs  candle_detector.rs  classification.rs  drift_monitor.rs  face_detector.rs  face_mesh.rs  focalpoint.rs  gaze_estimator.rs  lib.rs  model.rs  multi_monitor.rs  onnx_detector.rs  pipeline.rs  privacy.rs  processing.rs  smoothing.rs
crates/eyetracker-inference/tests/: fr_eye_integration.rs
crates/eyetracker-math/: Cargo.toml
crates/eyetracker-math/benches/: math_benches.rs
crates/eyetracker-math/src/: lib.rs
docs/: SAFETY.md  THREAT_MODEL.md  USAGE.md  index.md
docs/boundary/: eyetracker.md
docs/intent/: eyetracker.md
docs/journeys/manifests/: main-flow.json
docs/operations/: journey-traceability.md
docs/sessions/20260429-sladge-badge-rollout/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md
