[workspace]
members = [
  "crates/eyetracker-domain",
  "crates/eyetracker-math",
  "crates/eyetracker-core", 
  "crates/eyetracker-ffi",
  "crates/eyetracker-camera",
  "crates/eyetracker-inference",
  "crates/eyetracker-cli",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }

# Camera capture
nokhwa = { version = "0.10", features = ["input-native", "input-v4l", "input-avfoundation", "input-msmf"] }

# Image processing
image = "0.25"

# TUI
crossterm = "0.28"
ratatui = "0.26"

# Async utilities
poll-promise = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Serialization
serde_json = "1.0"

# Time
chrono = "0.4"
