[workspace]
members = [
  "crates/eyetracker-domain",
  "crates/eyetracker-math",
  "crates/eyetracker-core",
  "crates/eyetracker-ffi",
  "crates/eyetracker-camera",
  "crates/eyetracker-inference",
  "crates/eyetracker-cli",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
image = "0.25"
anyhow = "1"
tracing = "0.1"
