[package]
name = "eyetracker-camera"
version = "0.1.0"
edition = "2024"
description = "High-performance webcam capture for eye tracking"
license = "MIT"
authors = ["Phenotype"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Camera capture
nokhwa = { workspace = true }

# Image processing
image = { workspace = true }

# Async runtime
poll-promise = { workspace = true }

# Error handling
anyhow = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
objc2 = "0.6"
mach2 = "0.5"
