[package]
name = "eyetracker-camera"
version = "0.1.0"
edition = "2021"
description = "High-performance webcam capture for eye tracking"
license = "MIT"
authors = ["Phenotype"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Image processing
image = { workspace = true }

# Async runtime
poll-promise = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Video capture (cross-platform)
# Camera capture
ccap-rs = "1.6"
[target.'cfg(target_os = "macos")'.dependencies]
# Metal for GPU-accelerated frame processing
metal = "0.29"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux video capture
v4l = "0.14"
