[package]
name = "eyetracker-cli"
version = "0.1.0-alpha"
edition = "2021"
description = "Eye tracker CLI application"

[dependencies]
eyetracker-camera = { path = "../eyetracker-camera" }
eyetracker-inference = { path = "../eyetracker-inference" }
eyetracker-core = { path = "../eyetracker-core" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "eyetracker"
path = "src/main.rs"
