[package]
name = "eyetracker-cli"
version = "0.1.0-alpha"
edition = "2021"
description = "Eye tracker CLI application"

[dependencies]
eyetracker-camera = { path = "../eyetracker-camera" }
eyetracker-inference = { path = "../eyetracker-inference" }
eyetracker-core = { path = "../eyetracker-core" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-graphics-types = "0.1"

[[bin]]
name = "eyetracker"
path = "src/main.rs"
